# WeatherDomeControl

./: .hgignore  WeatherDomeControl.atsln
WeatherDomeControl/: CMakeLists.txt  WeatherDomeControl.cproj  definitions.h  main.c  run.bat
WeatherDomeControl/bme280/: bme280_user.c  bme280_user.h
WeatherDomeControl/i2c/: i2c.c  i2c.h
WeatherDomeControl/mlx90614/: mlx90614.c  mlx90614.h
WeatherDomeControl/motor/: motor.c  motor.h
WeatherDomeControl/usart/: usart.c  usart.h
pcb/: button_panel.lay6  simple_motor_control.lay6
